--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
       <!-- particle用-->
       <script src="https://unpkg.com/aframe-particle-system-component@1.0.x/dist/aframe-particle-system-component.min.js"></script>
       <!-- gltfアニメーション用 -->
-      <!-- <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v6.0.0/dist/aframe-extras.min.js"></script> -->
-      <script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
+      <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v4.2.0/dist/aframe-extras.min.js"></script>
       <script>
          AFRAME.registerComponent("registerevents", {
             init: function() {
