--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                rotation="-90 0 0"
                gltf-model="#me"
                scale="1 1 1"
-               animation-mixer="loop: pingpong;"
+               animation-mixer
             >
 
             <!-- animation="property: rotation; to: 0 10000 0; loop: true; dur: 500000;" -->
