--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
    <body>
       <div id="loader" class="loader">
          <div class="loader__wrapper">
-            <p class="loader__para">please hold your phone up to the marker
+            <p class="loader__para">please hold your phone up to the marker1
             </p>
             <img class="loader__img" src="https://genkasaneiwa.github.io/me/assets/img/marker.png" alt="marker">
             <!-- <p class="loader__para">*music will start as soon as the marker matches</p> -->
@@ -101,13 +101,13 @@
                rotation="270 0 0">
             </a-image> -->
 
-            <a-entity   
+            <a-gltf-model   
                position="0 0 1"
                rotation="-90 0 0"
                gltf-model="#me"
-               scale="1 1 1"
+               scale="10 10 10"
                animation-mixer
-            >
+            ></a-gltf-model>
 
             <!-- animation="property: rotation; to: 0 10000 0; loop: true; dur: 500000;" -->
          
