--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
                rotation="270 0 0">
             </a-image> -->
 
-            <a-gltf-model   
+            <a-entity   
                position="0 0 1"
                rotation="-90 0 0"
                gltf-model="#me"
                scale="10 10 10"
-               animation-mixer
-            ></a-gltf-model>
+               animation-mixer="loop:once"
+            ></a-entity>
 
             <!-- animation="property: rotation; to: 0 10000 0; loop: true; dur: 500000;" -->
          
